fix bug for menu on the header on mobile version

--- a/src/main/webapp/assets/sass/z-responsive-candidate.sass
+++ b/src/main/webapp/assets/sass/z-responsive-candidate.sass
@@ -1480,9 +1480,11 @@
       position: absolute
       left: 0
       top: 50px
-      z-index: 999
+      z-index: 999999
       display: none
       height: auto
+      bottom: 0
+      right: 0
       ul
         display: inline-block
         width: 100%
